--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,7 +4,7 @@
     <title>Administración</title>
 </head>
 <body>
-    <h1>Administrador productos</h1>
+    <h1>Administrar productos</h1>
 
     <a href="/agregar">Agregar productos</a>
 
